[package]
name = "template-rust-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5"
rayon = "1.5"

[target.i586-unknown-linux-gnu]
linker = "gcc"

[profile.release]
opt-level = 'z' # Optimize for size
codegen-units = 1
lto = true
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*